finally figured out npm error (was missing npm init) also added to base and animation.scss files

--- a/package.json
+++ b/package.json
@@ -1,1 +1,19 @@
-{}
+{
+  "name": "portfoliofinal",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Trane7/PortfolioFinal.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Trane7/PortfolioFinal/issues"
+  },
+  "homepage": "https://github.com/Trane7/PortfolioFinal#readme"
+}
